--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <!--582d001e-0943-402c-bccf-71a1d8790ad3 a-->
 
-    <title>ACE Handyman Services | Northeast Metro Atlanta</title>
+    <title>Divine Home Services</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
 
