--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
           <div class="service-item">
             <h3>Electrical</h3>
-            <p>Wiring, lighting, and troubleshooting electrical issues.</p>
+            <p>Wiring, lighting, audio system and troubleshooting electrical issues.</p>
           </div>
           <div class="service-item">
             <h3>Carpentry</h3>
