--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </div>
           <div class="service-item">
             <h3>Carpentry</h3>
-            <p>Custom furniture, repairs, and installations.</p>
+            <p>Custom furniture, repairs, installations, and renovations.</p>
           </div>
         </div>
       </div>
