--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header>
       <div class="container">
         <h1>Divine Home Services</h1>
+        <p>breaking on purpose</p>
         <nav>
           <ul>
             <li><a href="#services">Services</a></li>
