--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <div class="container">
         <h1>Divine Home Services</h1>
         <p>Your Trusted Home Repair Experts</p>
+
+        <button id="menu-toggle">Menu</button>
         <nav>
           <ul>
             <li><a href="#services">Services</a></li>
