--- a/index.html
+++ b/index.html
@@ -513,15 +513,10 @@
         Follow Us on Facebook
       </h4>
       <div class="box">
-        <a href="https://www.facebook.com/p/Divine-home-services-100077283851887/">
+        <a href="https://www.facebook.com/p/Divine-home-services-100077283851887/" aria-label="Follow us on Facebook">
           <i class="fa fa-facebook" aria-hidden="true"></i>
+          <span class="sr-only">Follow us on Facebook</span>
         </a>
-        <!-- <a href="">
-          <i class="fa fa-youtube" aria-hidden="true"></i>
-        </a>
-        <a href="">
-          <i class="fa fa-instagram" aria-hidden="true"></i>
-        </a> -->
       </div>
     </div>
   </section>
