--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </div>
           <div class="col-md-6">
             <div class="img-box">
-              <img src="pics/ba3.webp" alt="">
+              <img src="pics/ladder.webp" alt="smile with ladder in background">
             </div>
           </div>
         </div>
@@ -182,7 +182,7 @@
         </div>
         <div class="col-lg-7 col-md-6">
           <div class="img-box">
-            <img src="pics/ladder.webp" alt="">
+            <img src="pics/ba3.webp" alt="before and after pic">
           </div>
         </div>
       </div>
