--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Divine Home Services</title>
+    <title>Divine Homes Services</title>
 
     <!-- slider at "What Our Clients Say" -->
     <link
@@ -54,7 +54,7 @@
           <div class="container-fluid">
             <nav class="navbar navbar-expand-lg custom_nav-container">
               <a class="navbar-brand" href="index.html">
-                <span> Divine Home Services </span>
+                <span> Divine Homes Services </span>
               </a>
 
               <button
@@ -133,7 +133,7 @@
             <div class="detail-box">
               <h2>About us</h2>
               <p>
-                Divine Home Services is a family-owned business with years of
+                Divine Homes Services is a family-owned business with years of
                 experience in providing top-notch home repair and maintenance
                 services. Our mission is to make your home safe, functional, and
                 beautiful.
@@ -457,7 +457,7 @@
     <footer class="footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayDateYear"></span> Divine Home Services. All
+          &copy; <span id="displayDateYear"></span> Divine Homes Services. All
           rights reserved.
           <a href="https://gokame.com/">Gokame.com</a>
         </p>
