--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="img-box">
-              <img src="images/professional-img.png" alt="" />
+              <img src="pics/pointRight.png" alt="" />
             </div>
           </div>
           <div class="col-md-6">
@@ -193,7 +193,7 @@
           <div class="col-sm-6 col-md-4 mx-auto">
             <div class="box">
               <div class="img-box">
-                <img src="images/s1.png" alt="" />
+                <img src="icons/s1.png" alt="" />
               </div>
               <div class="detail-box">
                 <h5>Maintenance</h5>
@@ -204,7 +204,7 @@
           <div class="col-sm-6 col-md-4 mx-auto">
             <div class="box">
               <div class="img-box">
-                <img src="images/s2.png" alt="" />
+                <img src="icons/s2.png" alt="" />
               </div>
               <div class="detail-box">
                 <h5>Electrical</h5>
@@ -215,7 +215,7 @@
           <div class="col-sm-6 col-md-4 mx-auto">
             <div class="box">
               <div class="img-box">
-                <img src="images/s3.png" alt="" />
+                <img src="icons/s3.png" alt="" />
               </div>
               <div class="detail-box">
                 <h5>Plumbing</h5>
@@ -328,7 +328,7 @@
               <div class="box">
                 <div class="client_id">
                   <div class="img-box">
-                    <img src="images/client-2.jpg" alt="" />
+                    <img src="pics/client-2.jpg" alt="" />
                   </div>
                   <div class="client_detail">
                     <div class="client_info">
