format and wording

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Site Metas -->
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta
+      name="keywords"
+      content="Home Services Repair Restoration Maintenance Fix House"
+    />
+    <meta name="description" content="Home Services Website" />
+    <meta name="author" content="Moki at Gokame" />
 
     <title>Divine Homes Services</title>
 
@@ -39,11 +42,11 @@
         <div class="header_top">
           <div class="container-fluid">
             <div class="contact_nav">
-              <a href="">
+              <a href="tel:205-777-7271">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span> Call : 205-777-7271 </span>
               </a>
-              <a href="">
+              <a href="mailto:divinehomesservices@outlook.com">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span> Email : divinehomesservices@outlook.com </span>
               </a>
@@ -138,7 +141,7 @@
                 services. Our mission is to make your home safe, functional, and
                 beautiful.
               </p>
-              <a href=""> Read More </a>
+              <!-- <a href=""> Read More </a> -->
             </div>
           </div>
           <div class="col-lg-7 col-md-6">
@@ -173,7 +176,7 @@
                 that exceed your expectations. We strive to make the repair
                 process as smooth and stress-free as possible.
               </p>
-              <a href=""> Read More </a>
+              <!-- <a href=""> Read More </a> -->
             </div>
           </div>
         </div>
@@ -228,7 +231,7 @@
           </div>
         </div>
         <div class="btn-box">
-          <a href=""> View More </a>
+          <!-- <a href=""> View More </a> -->
         </div>
       </div>
     </section>
