--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
                       <div class="img-box">
                         <i class="fa fa-phone" aria-hidden="true"></i>
                       </div>
-                      <p>+02 1234567890</p>
+                      <p>205-777-7271</p>
                     </div>
                   </a>
                 </div>
@@ -159,7 +159,7 @@
                       <div class="img-box">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
                       </div>
-                      <p>demo@gmail.com</p>
+                      <p>divinehomesservices@outlook.com</p>
                     </div>
                   </a>
                 </div>
@@ -169,8 +169,16 @@
         </div>
       </div>
       <div class="social-box">
-        <h4>Follow Us</h4>
-        <div class="box"></div>
+        <h4>Follow Us on Facebook</h4>
+        <div class="box">
+          <a
+            href="https://www.facebook.com/p/Divine-home-services-100077283851887/"
+            aria-label="Follow us on Facebook"
+          >
+            <i class="fa fa-facebook" aria-hidden="true"></i>
+            <span class="sr-only">Follow us on Facebook</span>
+          </a>
+        </div>
       </div>
     </section>
 
