--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,12 @@
     <link href="css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
+
+    <!-- scripts -->
+    <script defer src="js/scripts.js"></script>
+
+    <!-- emailjs -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   </head>
 
   <body>
@@ -95,8 +101,7 @@
       <!-- end header section -->
     </div>
 
-    <!-- contact section -->
-
+    <!-- contact Form -->
     <section class="contact_section layout_padding">
       <div class="container">
         <div class="heading_container">
@@ -106,16 +111,39 @@
           <div class="col-md-6">
             <form action="">
               <div>
-                <input type="text" placeholder="Name" />
+                <input
+                  type="text"
+                  id="name"
+                  name="from_name"
+                  placeholder="Name"
+                />
               </div>
               <div>
-                <input type="text" placeholder="Phone Number" />
+                <input
+                  type="text"
+                  id="phone_number"
+                  name="phone_number"
+                  placeholder="Phone Number"
+                />
               </div>
               <div>
-                <input type="email" placeholder="Email" />
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  required
+                  placeholder="Email"
+                />
               </div>
               <div>
-                <input type="text" class="message-box" placeholder="Message" />
+                <input
+                  type="text"
+                  id="name"
+                  rows="2"
+                  name="from_name"
+                  lass="message-box"
+                  placeholder="Message"
+                />
               </div>
               <div class="d-flex">
                 <button>SEND</button>
@@ -149,7 +177,7 @@
                       <div class="img-box">
                         <i class="fa fa-map-marker" aria-hidden="true"></i>
                       </div>
-                      <p>Lorem Ipsum is simply dummy text</p>
+                      <p>Calera, Alabama</p>
                     </div>
                   </a>
                 </div>
@@ -159,7 +187,7 @@
                       <div class="img-box">
                         <i class="fa fa-phone" aria-hidden="true"></i>
                       </div>
-                      <p>+02 1234567890</p>
+                      <p>205-777-7271</p>
                     </div>
                   </a>
                 </div>
@@ -169,7 +197,7 @@
                       <div class="img-box">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
                       </div>
-                      <p>demo@gmail.com</p>
+                      <p>divinehomesservices@outlook.com</p>
                     </div>
                   </a>
                 </div>
@@ -179,8 +207,16 @@
         </div>
       </div>
       <div class="social-box">
-        <h4>Follow Us</h4>
-        <div class="box"></div>
+        <h4>Follow Us on Facebook</h4>
+        <div class="box">
+          <a
+            href="https://www.facebook.com/p/Divine-home-services-100077283851887/"
+            aria-label="Follow us on Facebook"
+          >
+            <i class="fa fa-facebook" aria-hidden="true"></i>
+            <span class="sr-only">Follow us on Facebook</span>
+          </a>
+        </div>
       </div>
     </section>
 
