--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
                 suffered alteration in some form, by injected humour, or
                 randomised
               </p>
-              <a href=""> Read More </a>
+              <a href="contact.html"> Contact </a>
             </div>
           </div>
           <div class="col-lg-7 col-md-6">
