--- a/contact.html
+++ b/contact.html
@@ -101,52 +101,31 @@
       <!-- end header section -->
     </div>
 
-    <!-- contact Form -->
-    <section class="contact_section layout_padding">
+    <!-- Contact Form -->
+    <section class="contact_section layout_padding" >
       <div class="container">
         <div class="heading_container">
           <h2>Contact Us</h2>
         </div>
         <div class="row">
           <div class="col-md-6">
-            <form action="">
+            <form action="" id="contactForm">
               <div>
-                <input
-                  type="text"
-                  id="name"
-                  name="from_name"
-                  placeholder="Name"
-                />
+                <input type="text" placeholder="Name" id="name" name="from_name" />
               </div>
               <div>
-                <input
-                  type="text"
-                  id="phone_number"
-                  name="phone_number"
-                  placeholder="Phone Number"
-                />
+                <input type="text" placeholder="Phone Number" id="phone" name="phone_number" required/>
               </div>
               <div>
-                <input
-                  type="email"
-                  id="email"
-                  name="email"
-                  required
-                  placeholder="Email"
-                />
+                <input type="email" placeholder="Email" id="email" name="email" required/>
               </div>
               <div>
-                <input
-                  type="text"
-                  id="name"
-                  rows="2"
-                  name="from_name"
-                  lass="message-box"
-                  placeholder="Message"
-                />
+                <input type="text" class="message-box" placeholder="Message" id="message" name="message"/>
               </div>
               <div class="d-flex">
-                <button>SEND</button>
+                <button
+                id="submit"
+                type="submit">SEND</button>
               </div>
             </form>
           </div>
