--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 services. Our mission is to make your home safe, functional, and
                 beautiful.
               </p>
-              <!-- <a href=""> Read More </a> -->
+              <a href="about.html"> About </a>
             </div>
           </div>
           <div class="col-lg-7 col-md-6">
@@ -182,7 +182,7 @@
                 that exceed your expectations. We strive to make the repair
                 process as smooth and stress-free as possible.
               </p>
-              <!-- <a href=""> Read More </a> -->
+              <a href="service.html"> Services </a>
             </div>
           </div>
         </div>
@@ -360,11 +360,9 @@
         </div>
       </div>
     </section>
-
     <!-- end client section -->
 
     <!-- Contact Form -->
-
     <section class="contact_section layout_padding" >
       <div class="container">
         <div class="heading_container">
@@ -377,13 +375,13 @@
                 <input type="text" placeholder="Name" id="name" name="from_name" />
               </div>
               <div>
-                <input type="text" placeholder="Phone Number" id="phone" name="phone_number"/>
+                <input type="text" placeholder="Phone Number" id="phone" name="phone_number" required/>
               </div>
               <div>
-                <input type="email" placeholder="Email" id="email" name="email"/>
+                <input type="email" placeholder="Email" id="email" name="email" required/>
               </div>
               <div>
-                <input type="text" class="message-box" placeholder="Message" id="message" name="message"/>
+                <input type="text" placeholder="Message" id="message" name="message" class="message-box" />
               </div>
               <div class="d-flex">
                 <button
