--- a/service.html
+++ b/service.html
@@ -147,7 +147,7 @@
           </div>
         </div>
         <div class="btn-box">
-          <a href=""> View More </a>
+          <a href="contact.html"> Contact </a>
         </div>
       </div>
     </section>
