Facebook and footer Updated

--- a/about.html
+++ b/about.html
@@ -172,7 +172,7 @@
         <h4>Follow Us on Facebook</h4>
         <div class="box">
           <a
-            href="https://www.facebook.com/p/Divine-home-services-100077283851887/"
+            href="https://www.facebook.com/divinehomesservices"
             aria-label="Follow us on Facebook"
           >
             <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -188,8 +188,9 @@
     <footer class="footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayDateYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          &copy; <span id="displayDateYear"></span> Divine Homes Services. All
+          rights reserved.
+          <a href="https://gokame.com/">Gokame.com</a>
         </p>
       </div>
     </footer>
