--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
         <h4>Follow Us on Facebook</h4>
         <div class="box">
           <a
-            href="https://www.facebook.com/p/Divine-home-services-100077283851887/"
+            href="https://www.facebook.com/divinehomesservices"
             aria-label="Follow us on Facebook"
           >
             <i class="fa fa-facebook" aria-hidden="true"></i>
