--- a/contact.html
+++ b/contact.html
@@ -189,7 +189,7 @@
         <h4>Follow Us on Facebook</h4>
         <div class="box">
           <a
-            href="https://www.facebook.com/p/Divine-home-services-100077283851887/"
+            href="https://www.facebook.com/divinehomesservices"
             aria-label="Follow us on Facebook"
           >
             <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -203,7 +203,13 @@
 
     <!-- footer section -->
     <footer class="footer_section">
-      <div class="container"></div>
+      <div class="container">
+        <p>
+          &copy; <span id="displayDateYear"></span> Divine Homes Services. All
+          rights reserved.
+          <a href="https://gokame.com/">Gokame.com</a>
+        </p>
+      </div>
     </footer>
     <!-- footer section -->
 
