--- a/service.html
+++ b/service.html
@@ -198,19 +198,14 @@
         </div>
       </div>
       <div class="social-box">
-        <h4>Follow Us</h4>
+        <h4>Follow Us on Facebook</h4>
         <div class="box">
-          <a href="">
+          <a
+            href="https://www.facebook.com/divinehomesservices"
+            aria-label="Follow us on Facebook"
+          >
             <i class="fa fa-facebook" aria-hidden="true"></i>
-          </a>
-          <a href="">
-            <i class="fa fa-twitter" aria-hidden="true"></i>
-          </a>
-          <a href="">
-            <i class="fa fa-youtube" aria-hidden="true"></i>
-          </a>
-          <a href="">
-            <i class="fa fa-instagram" aria-hidden="true"></i>
+            <span class="sr-only">Follow us on Facebook</span>
           </a>
         </div>
       </div>
@@ -222,8 +217,9 @@
     <footer class="footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayDateYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          &copy; <span id="displayDateYear"></span> Divine Homes Services. All
+          rights reserved.
+          <a href="https://gokame.com/">Gokame.com</a>
         </p>
       </div>
     </footer>
