top Contact Line

--- a/about.html
+++ b/about.html
@@ -40,13 +40,13 @@
         <div class="header_top">
           <div class="container-fluid">
             <div class="contact_nav">
-              <a href="">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                <span> Call : +01 123455678990 </span>
-              </a>
-              <a href="">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-                <span> Email : demo@gmail.com </span>
+                <a href="tel:205-777-7271">
+                  <i class="fa fa-phone" aria-hidden="true"></i>
+                  <span> Call : 205-777-7271 </span>
+                </a>
+                <a href="mailto:divinehomesservices@outlook.com">
+                  <i class="fa fa-envelope" aria-hidden="true"></i>
+                  <span> Email : divinehomesservices@outlook.com </span>
               </a>
             </div>
           </div>
@@ -104,12 +104,7 @@
             <div class="detail-box">
               <h2>About us</h2>
               <p>
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form, by
-                injected humour, or randomisedThere are many variations of
-                passages of Lorem Ipsum available, but the majority have
-                suffered alteration in some form, by injected humour, or
-                randomised
+                We are based in Calera Alabaster, so we serve the surrounding areas: Hoover, Bessemer, Helena, Pelham, Alabaster, Clanton, Montevallo, Columbiana, Jemison, Thorsby, and neighboring areas. Please call to check if we can serve you.
               </p>
               <a href="contact.html"> Contact </a>
             </div>
