--- a/service.html
+++ b/service.html
@@ -40,13 +40,13 @@
         <div class="header_top">
           <div class="container-fluid">
             <div class="contact_nav">
-              <a href="">
+              <a href="tel:205-777-7271">
                 <i class="fa fa-phone" aria-hidden="true"></i>
-                <span> Call : +01 123455678990 </span>
+                <span> Call : 205-777-7271 </span>
               </a>
-              <a href="">
+              <a href="mailto:divinehomesservices@outlook.com">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
-                <span> Email : demo@gmail.com </span>
+                <span> Email : divinehomesservices@outlook.com </span>
               </a>
             </div>
           </div>
