--- a/about.html
+++ b/about.html
@@ -129,17 +129,17 @@
             <div class="info_items">
               <div class="row">
                 <div class="col-md-4">
-                  <a href="">
+                  <a href="contact.html">
                     <div class="item">
                       <div class="img-box">
                         <i class="fa fa-map-marker" aria-hidden="true"></i>
                       </div>
-                      <p>Lorem Ipsum is simply dummy text</p>
+                      <p>Calera, Alabama</p>
                     </div>
                   </a>
                 </div>
                 <div class="col-md-4">
-                  <a href="">
+                  <a href="tel:205-777-7271">
                     <div class="item">
                       <div class="img-box">
                         <i class="fa fa-phone" aria-hidden="true"></i>
@@ -149,7 +149,7 @@
                   </a>
                 </div>
                 <div class="col-md-4">
-                  <a href="">
+                  <a href="mailto:divinehomesservices@outlook.com">
                     <div class="item">
                       <div class="img-box">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
