--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@
           <div class="col-md-6">
             <div class="map_container">
               <div class="map">
-                <div id="googleMap" style="width: 100%; height: 100%"></div>
+                <iframe title="Google Maps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d359485.1627163707!2d-86.6506130099684!3d33.16611625039154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1738944493298!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
           </div>
@@ -151,7 +151,7 @@
             <div class="info_items">
               <div class="row">
                 <div class="col-md-4">
-                  <a href="">
+                  <a href="contact.html">
                     <div class="item">
                       <div class="img-box">
                         <i class="fa fa-map-marker" aria-hidden="true"></i>
@@ -161,7 +161,7 @@
                   </a>
                 </div>
                 <div class="col-md-4">
-                  <a href="">
+                  <a href="tel:205-777-7271">
                     <div class="item">
                       <div class="img-box">
                         <i class="fa fa-phone" aria-hidden="true"></i>
@@ -171,7 +171,7 @@
                   </a>
                 </div>
                 <div class="col-md-4">
-                  <a href="">
+                  <a href="mailto:divinehomesservices@outlook.com">
                     <div class="item">
                       <div class="img-box">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -217,8 +217,6 @@
     <script src="js/bootstrap.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="js/custom.js"></script>
-    <!-- Google Map -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
-    <!-- End Google Map -->
+    
   </body>
 </html>
