sevices and meta added

--- a/about.html
+++ b/about.html
@@ -10,9 +10,12 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Site Metas -->
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta
+      name="keywords"
+      content="Home Services Repair Restoration Maintenance Fix House Alabama"
+    />
+    <meta name="description" content="Home Services Website" />
+    <meta name="author" content="Moki at Gokame" />
 
     <title>Divine Homes Services</title>
 
@@ -104,16 +107,34 @@
             <div class="detail-box">
               <h2>About us</h2>
               <p>
-                We are based in Calera Alabaster, so we serve the surrounding areas: Hoover, Bessemer, Helena, Pelham, Alabaster, Clanton, Montevallo, Columbiana, Jemison, Thorsby, and neighboring areas. Please call to check if we can serve you.
+                Divine Homes Services is a Home Repair business based in Calera, Alabama that focuses on repairing homes as well as smaller commercial and community projects.
+              </p>
+              <a href="service.html"> Services </a>
+            </div>
+          </div>
+          <div class="col-lg-7 col-md-6">
+            <div class="img-box">
+              <img src="pics/team.jpg" alt="team" />
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-5 col-md-6">
+            <div class="detail-box">
+              <h2>South Birmingham</h2>
+              <p>
+                We are based in Calera Alabaster, so we serve the surrounding areas: Hoover, Indian Springs Village, Bessemer, Helena, Pelham, Alabaster, Clanton, Montevallo, Columbiana, Jemison, Thorsby, and neighboring areas. Please contact us to see if we can serve you.
               </p>
               <a href="contact.html"> Contact </a>
             </div>
           </div>
           <div class="col-lg-7 col-md-6">
             <div class="img-box">
-              <img src="images/about-img.jpg" alt="" />
+              <iframe title="Google Maps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d359485.1627163707!2d-86.6506130099684!3d33.16611625039154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1738944493298!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
+
+          
         </div>
       </div>
     </section>
@@ -195,8 +216,5 @@
     <script src="js/bootstrap.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="js/custom.js"></script>
-    <!-- Google Map -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
-    <!-- End Google Map -->
   </body>
 </html>
