--- a/service.html
+++ b/service.html
@@ -10,9 +10,12 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Site Metas -->
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta
+      name="keywords"
+      content="Home Services Repair Restoration Maintenance Fix House Alabama"
+    />
+    <meta name="description" content="Home Services Website" />
+    <meta name="author" content="Moki at Gokame" />
 
     <title>Divine Homes Services</title>
 
@@ -106,41 +109,72 @@
           <div class="col-sm-6 col-md-4 mx-auto">
             <div class="box">
               <div class="img-box">
-                <img src="images/s1.png" alt="" />
+                <img src="icons/s1.png" alt="" />
               </div>
               <div class="detail-box">
                 <h5>Maintenance</h5>
-                <p>
-                  when looking at its layout. The point of using Lorem Ipsum is
-                  that it has a more-or-less normal
-                </p>
+                <p>Keep your home running smoothly with regular maintenance.</p>
               </div>
             </div>
           </div>
           <div class="col-sm-6 col-md-4 mx-auto">
             <div class="box">
               <div class="img-box">
-                <img src="images/s2.png" alt="" />
+                <img src="icons/s2.png" alt="" />
               </div>
               <div class="detail-box">
                 <h5>Electrical</h5>
-                <p>
-                  when looking at its layout. The point of using Lorem Ipsum is
-                  that it has a more-or-less normal
-                </p>
+                <p>Safe and reliable electrical services you can trust.</p>
               </div>
             </div>
           </div>
           <div class="col-sm-6 col-md-4 mx-auto">
             <div class="box">
               <div class="img-box">
-                <img src="images/s3.png" alt="" />
+                <img src="icons/s3.png" alt="" />
               </div>
               <div class="detail-box">
                 <h5>Plumbing</h5>
                 <p>
-                  when looking at its layout. The point of using Lorem Ipsum is
-                  that it has a more-or-less normal
+                  Unclog drains, fix leaks, and restore your plumbing to perfect
+                  working order.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6 col-md-4 mx-auto">
+            <div class="box">
+              <div class="img-box">
+                <img src="icons/home.svg" alt="" />
+              </div>
+              <div class="detail-box">
+                <h5>Drywall</h5>
+                <p>We can fix any drywall damage and make walls look like new.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 mx-auto">
+            <div class="box">
+              <div class="img-box">
+                <img src="icons/paint.svg" alt="" />
+              </div>
+              <div class="detail-box">
+                <h5>Paint</h5>
+                <p>High quality paint jobs done neat and quick.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 mx-auto">
+            <div class="box">
+              <div class="img-box">
+                <img src="icons/tools.svg" alt="" />
+              </div>
+              <div class="detail-box">
+                <h5>Custom jobs</h5>
+                <p>
+                  Custom requests are welcomed. Let's figure out a solution for you.
                 </p>
               </div>
             </div>
