--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,12 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Site Metas -->
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta
+      name="keywords"
+      content="Home Services Repair Restoration Maintenance Fix House Alabama"
+    />
+    <meta name="description" content="Home Services Website" />
+    <meta name="author" content="Moki at Gokame" />
 
     <title>Divine Homes Services</title>
 
@@ -105,7 +108,7 @@
     <section class="contact_section layout_padding" >
       <div class="container">
         <div class="heading_container">
-          <h2>Contact Us</h2>
+          <h2>Contact Us For A Quote</h2>
         </div>
         <div class="row">
           <div class="col-md-6">
