--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Site Metas -->
     <meta
       name="keywords"
-      content="Home Services Repair Restoration Maintenance Fix House"
+      content="Home Services Repair Restoration Maintenance Fix House Alabama"
     />
     <meta name="description" content="Home Services Website" />
     <meta name="author" content="Moki at Gokame" />
@@ -182,7 +182,7 @@
                 that exceed your expectations. We strive to make the repair
                 process as smooth and stress-free as possible.
               </p>
-              <a href="service.html"> Services </a>
+              <a href="service.html">View Services </a>
             </div>
           </div>
         </div>
@@ -478,9 +478,6 @@
     <script src="js/bootstrap.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="js/custom.js"></script>
-    <!-- Google Map -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
-    <!-- End Google Map -->
   </body>
 
 </html>
