--- a/contact.html
+++ b/contact.html
@@ -107,6 +107,7 @@
         <div class="heading_container">
           <h2>Contact Us For A Quote</h2>
         </div>
+        <!-- top row -->
         <div class="row">
           <div class="col-md-6">
             <form action="" id="contactForm">
@@ -165,6 +166,17 @@
                 ></iframe>
               </div>
             </div>
+          </div>
+        </div>
+        <!-- 2nd row -->
+        <div class="row">
+          <div class="col-md-6">
+            <h1>Hours</h1>
+            <p>Monday - Friday: 7am - 4pm</p>
+            <p>Saturday - Sunday: Closed</p>
+          </div>
+          <div class="col-md-6">
+            <div class="map_container"></div>
           </div>
         </div>
       </div>
