contact to fetch from backend

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="css/responsive.css" />
 
     <!-- Scripts: Utilities -->
-    <script defer src="/js/scripts.js"></script>
+    <script defer src="/js/contactForm.js"></script>
 
     <!-- email -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
