--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
 
     <!-- scripts -->
-    <script defer src="js/scripts.js"></script>
+    <script defer src="js/contactForm.js"></script>
 
     <!-- emailjs -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
