type module for contactForm.js

--- a/contact.html
+++ b/contact.html
@@ -35,15 +35,16 @@
     <link href="css/responsive.css" rel="stylesheet" />
 
     <!-- scripts -->
-    <script defer src="js/contactForm.js"></script>
-
-    <!-- emailjs -->
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script type="module" defer src="js/contactForm.js"></script>
+    <script src="js/custom.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   </head>
 
   <body>
     <div class="hero_area">
-      <!-- header section strats -->
+      <!-- header section -->
       <header class="header_section">
         <div class="header_top">
           <div class="container-fluid">
@@ -254,10 +255,5 @@
       </div>
     </footer>
     <!-- footer section -->
-
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <script src="js/custom.js"></script>
   </body>
 </html>
