--- a/index.html
+++ b/index.html
@@ -33,16 +33,17 @@
     <!-- responsive style CSS -->
     <link rel="stylesheet" href="css/responsive.css" />
 
-    <!-- Scripts: Utilities -->
-    <script defer src="/js/contactForm.js"></script>
-
-    <!-- email -->
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <!-- scripts -->
+    <script type="module" defer src="js/contactForm.js"></script>
+    <script src="js/custom.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   </head>
 
   <body>
     <div class="hero_area">
-      <!-- header section strats -->
+      <!-- header section -->
       <header class="header_section">
         <div class="header_top">
           <div class="container-fluid">
@@ -500,10 +501,5 @@
       </div>
     </footer>
     <!-- footer section -->
-
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <script src="js/custom.js"></script>
   </body>
 </html>
