removed tracker, defer script

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- scripts -->
     <script type="module" defer src="js/contactForm.js"></script>
-    <script src="js/custom.js"></script>
+    <script defer src="js/custom.js"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
