can only send 1 per minute

--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,7 @@
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LcaJd8qAAAAAFtCbGvypUPFpltCLytFb3lCcxzV"></script>
   </head>
 
   <body>
