can attach a file

--- a/contact.html
+++ b/contact.html
@@ -150,6 +150,15 @@
                   required
                 />
               </div>
+              <div>
+                <label for="file">Attach a file (Image, Drawing):</label>
+                <input
+                  type="file"
+                  id="file"
+                  name="file"
+                  accept=".jpg,.jpeg,.png,.pdf,.docx,.txt"
+                />
+              </div>
               <!-- Hidden reCAPTCHA token (reCAPTCHA Enterprise on GCP) -->
               <input
                 type="hidden"
