--- a/about.html
+++ b/about.html
@@ -110,9 +110,9 @@
             <div class="detail-box">
               <h2>About us</h2>
               <p>
-                Divine Homes Services is a Home Repair business based in Calera,
-                Alabama that focuses on repairing homes as well as smaller
-                commercial and community projects.
+                Divine Homes Services is a family-owned Home Repair business
+                based in Calera, Alabama that focuses on repairing homes as well
+                as smaller commercial and community projects.
               </p>
               <a href="service.html"> Services </a>
             </div>
